--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,30 @@
     transform: rotate(360deg);
   }
 }
+.card{
+  width :100%;
+  height: 290px;
+  margin-right: 0;
+  float: none;
+
+}
+.card_back{
+  background: #141414;
+  display: flex;
+  justify-content: center;
+  box-shadow: 0.4px 20px rgba(0,0,0,0.3);
+}
+.card_name{
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 0.9;
+}
+.card_small{
+  font-size: 80px;
+}
+.card_total{
+  font-size: 70px;
+}
+.card .card_inner{
+  height: 290px;
+}
